# pgtail

./: .gitignore  .golangci.yml  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  DESIGN-nuitka-migration.md  LICENSE  Makefile  README.md  codex-review.md  gemini-review.md  go.mod  go.sum  mkdocs.yml  pgtail.spec  plan.md  pyproject.toml  ruff.toml
.claude/agents/: ptk-architect.md  ptk-debugger.md
.claude/commands/: speckit.analyze.md  speckit.clarify.md  speckit.implement.md  speckit.plan.md  speckit.tasks.md
.claude/output-styles/: no-deferral.md
.github/workflows/: ci.yml  docs.yml  release.yml
.specify/memory/: constitution.md
cmd/pgtail/: main.go
docs/: 002-python-rewrite.md  CNAME  DESIGN.md  cli-reference.md  configuration.md  index.md
docs/features/: README.md  config-file.md  connection-tracking.md  csvlog-jsonlog-support.md  desktop-notifications.md  error-stats-dashboard.md  export-and-pipe.md  full-screen-tui.md  query-explain.md  (+10 more)
msix/: AppxManifest.xml
pgtail_py/: __init__.py  __main__.py  _toast_xml.py  _win_shortcut.py  _winrt.py  cli.py  cli_config.py  cli_connections.py  cli_core.py  cli_errors.py  cli_export.py  cli_filter.py  cli_fullscreen.py  cli_highlight.py  cli_main.py  cli_notify.py  cli_slow.py  cli_tail.py  cli_tail_display.py  cli_tail_filters.py  cli_tail_help.py  cli_theme.py  cli_time.py  cli_utils.py  colors.py  commands.py  config.py  connection_event.py  connection_parser.py  connection_stats.py  detector.py  detector_unix.py  detector_windows.py  display.py  enable_logging.py  error_stats.py  error_trend.py  export.py  field_filter.py  filter.py  (+40 more)
scripts/: build-msix.ps1  build-nuitka.sh  check-version-sync.sh  test-msix.ps1
tests/: __init__.py  conftest.py  test_cli_highlight.py  test_cli_tail_filters.py  test_connection_event.py  test_connection_parser.py  test_connection_stats.py  test_detector.py  test_display.py  test_enable_logging.py  test_error_stats.py  test_error_trend.py  test_export.py  test_filter.py  test_highlighter.py  test_highlighter_registry.py  test_highlighters_checkpoint.py  test_highlighters_connection.py  test_highlighters_diagnostic.py  test_highlighters_lock.py  test_highlighters_misc.py  test_highlighters_objects.py  test_highlighters_performance.py  test_highlighters_sql.py  test_highlighters_structural.py  test_highlighters_wal.py  test_highlighting_config.py  test_highlighting_integration.py  test_instance.py  test_notifier.py  test_parser.py  test_parser_timezone.py  test_performance.py  test_permission_advice.py  test_regex_filter.py  test_slow_query.py  test_slow_query_stats.py  test_sql_detector.py  test_sql_highlighter.py  test_sql_tokenizer.py  (+12 more)
winget/: willibrandon.pgtail.installer.yaml
wix/: pgtail.wxs
(+299 files in other folders)
