[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pgtail"
version = "0.1.0"
description = "PostgreSQL log tailer with auto-detection and color output"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Utilities",
]
dependencies = [
    "prompt_toolkit>=3.0.0",
    "psutil>=5.9.0",
    "tomlkit>=0.12.0",
    "pygments>=2.0",
    "textual>=0.89.0",
    "pyperclip>=1.8.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.1.0",
    "pyinstaller>=6.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "pymdown-extensions>=10.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "performance: marks tests as performance tests (may be flaky due to timing)",
]

[project.scripts]
pgtail = "pgtail_py.cli_main:cli_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pgtail_py*"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
